EVEREST-1925 WIP blocklist
